--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --watch",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --watch",
     "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
@@ -16,13 +16,12 @@
     "font-awesome": "^4.7.0",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
-    "v-wow": "git+https://github.com/guisoares2011/vue-wow.git",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-wow": "^1.2.0",
     "vuelidate": "^0.7.5",
     "vuex": "^3.1.2",
-    "wowjs": "^1.1.3"
+    "wow.js": "^1.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
